--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "cd test && mocha ./authorizer.test.js && mocha ./authorizer-server.test.js"
+    "test": "cd test && mocha ./authorizer.test.js --timeout=5000 && mocha ./authorizer-server.test.js"
   },
   "repository": {
     "type": "git",
